--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/app.css">
 
-	<script src="javascripts/modernizr.foundation.js"></script>
+  <script src="javascripts/modernizr.foundation.js"></script>
+  <script src="javascripts/modernizr-transitions.js"></script>
 
 </head>
 <body>
@@ -48,7 +49,7 @@
   <br><br>
   <div class="row">
     <div class="twelve columns">
-      <span class="label">Lista desde Flickr</span>
+      <span class="label">display del set desde Flickr usando masonry</span>
       <br><br>
       <div id="sets">
 
@@ -58,6 +59,7 @@
 
 	<!-- Included JS Files -->
 	<script src="javascripts/jquery.js"></script>
+  <script src="javascripts/jquery.masonry.min.js"></script>
 	<script src="javascripts/app.js"></script>
 </body>
 </html>
