--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<!-- Included CSS Files -->
   <link rel="stylesheet" href="stylesheets/styles.css">
   <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="stylesheets/glise.css">
 
   <script src="javascripts/modernizr.foundation.js"></script>
   <script src="javascripts/modernizr-transitions.js"></script>
@@ -60,6 +61,7 @@
 	<!-- Included JS Files -->
 	<script src="javascripts/jquery.js"></script>
   <script src="javascripts/jquery.masonry.min.js"></script>
+  <script src="javascripts/glise.js"></script>
 	<script src="javascripts/app.js"></script>
 </body>
 </html>
