--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <h4>ejemplo:</h4>
         <div class="four mobile-two columns">
           <h5>ALBUM</h5>
-          <a class="th" href="#"><img src="http://placehold.it/350x200"></a>
+          <a class="th drop-shadow" href="#"><img src="http://placehold.it/350x200"></a>
         </div>
         <div class="four mobile-two columns">
           <h5>ALBUM</h5>
-          <a class="th" href="#"><img src="http://placehold.it/350x200"></a>
+          <a class="th drop-shadow" href="#"><img src="http://placehold.it/350x200"></a>
         </div>
         <div class="four mobile-two columns">
           <h5>ALBUM</h5>
-          <a class="th" href="#"><img src="http://placehold.it/350x200"></a>
+          <a class="th drop-shadow" href="#"><img src="http://placehold.it/350x200"></a>
         </div>
       </div>
     </div>
