mas pruebas del css

--- a/home/index.html
+++ b/home/index.html
@@ -18,18 +18,38 @@
 </head>
 <body>
 
-	<div class="row">
-		<div class="large-12 columns">
-			<h2>PZFullModels</h2>
-			<hr />
-		</div>
+	<div class="fixed contain-to-grid">
+		<nav class="top-bar">
+		  <ul class="title-area">
+		    <!-- Title Area -->
+		    <li class="name">
+		      <h1><a href="#">PZFullModels</a></h1>
+		    </li>
+		    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+		    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+		  </ul>
+
+		  <section class="top-bar-section">
+		    <!-- Left Nav Section -->
+		    <ul class="left">
+		    </ul>
+
+		    <!-- Right Nav Section -->
+		    <ul class="right">
+		      <li class=><a href="#">Like</a></li>
+		      <li class=><a href="#">Share</a></li>
+		      <li class=><a href="#">Contact</a></li>
+		      
+		    </ul>
+		  </section>
+		</nav>
 	</div>
 
 	<div class="row">
 		<ul class="small-block-grid-1 large-block-grid-1">
 
 		  <li> 
-		  	<div class="gallery">
+		  	<div class="gallery effect8">
 		  		<h1>Maria Ramirez</h1>
 		  		<img src="http://farm8.staticflickr.com/7072/7403032064_5571a39720_b.jpg" alt="">
 		  	</div>
@@ -91,6 +111,7 @@
   </script>
   
   <script src="javascripts/foundation/foundation.js"></script>
+	<script src="javascripts/foundation/foundation.topbar.js"></script>
   <!--
 	<script src="javascripts/foundation/foundation.alerts.js"></script>
 	<script src="javascripts/foundation/foundation.clearing.js"></script>
@@ -104,7 +125,6 @@
 	<script src="javascripts/foundation/foundation.reveal.js"></script>
 	<script src="javascripts/foundation/foundation.section.js"></script>
 	<script src="javascripts/foundation/foundation.tooltips.js"></script>
-	<script src="javascripts/foundation/foundation.topbar.js"></script>
 	-->
   
   <script>
