--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Foundation 4</title>
+  <title>PZFullModels</title>
 
   <link rel="stylesheet" href="stylesheets/normalize.css" />
   
@@ -19,40 +19,37 @@
 <body>
 
 	<div class="fixed contain-to-grid">
-		<nav class="top-bar">
-		  <ul class="title-area">
-		    <!-- Title Area -->
-		    <li class="name">
-		      <h1><a href="#">PZFullModels</a></h1>
-		    </li>
-		    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-		    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-		  </ul>
+		<nav class="row my-nav">
 
-		  <section class="top-bar-section">
 		    <!-- Left Nav Section -->
 		    <ul class="left">
+		    	<li>PZFullModels</li>
 		    </ul>
 
 		    <!-- Right Nav Section -->
 		    <ul class="right">
-		      <li class=><a href="#">Like</a></li>
-		      <li class=><a href="#">Share</a></li>
-		      <li class=><a href="#">Contact</a></li>
+		      <li class=><a href="#"><img src="img/like.png" alt=""></a></li>
+		      <li class=><a href="#"><img src="img/mail.png" alt=""></a></li>
 		      
-		    </ul>
-		  </section>
-		</nav>
+		    </ul>		
+		  </nav>
 	</div>
 
 	<div class="row">
 		<ul class="small-block-grid-1 large-block-grid-1">
 
 		  <li> 
-		  	<div class="gallery effect8">
+		  	<div class="gallery">
 		  		<h1>Maria Ramirez</h1>
 		  		<img src="http://farm8.staticflickr.com/7072/7403032064_5571a39720_b.jpg" alt="">
 		  	</div>
+
+		  	<div class="large-12 colunms">
+		  		<ul  class="small-block-grid-1 large-block-grid-1">
+		  			<li id="sets"></li>
+		  		</ul>
+		  	</div>
+						
 		  </li>
 		  <li> 
 		  	<div class="gallery">
@@ -111,7 +108,11 @@
   </script>
   
   <script src="javascripts/foundation/foundation.js"></script>
-	<script src="javascripts/foundation/foundation.topbar.js"></script>
+	<script src="javascripts/vendor/jquery.js"></script>
+  <script src="javascripts/vendor/jquery.masonry.min.js"></script>
+  <script src="javascripts/vendor/glise.js"></script>
+	<script src="javascripts/app.js"></script>
+
   <!--
 	<script src="javascripts/foundation/foundation.alerts.js"></script>
 	<script src="javascripts/foundation/foundation.clearing.js"></script>
