script de galerias

--- a/home/index.html
+++ b/home/index.html
@@ -36,65 +36,9 @@
 	</div>
 
 	<div class="row">
-		<ul class="small-block-grid-1 large-block-grid-1">
+		<ul id="collections" class="small-block-grid-1 large-block-grid-1">
 
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Maria Ramirez</h1>
-		  		<img src="http://farm8.staticflickr.com/7072/7403032064_5571a39720_b.jpg" alt="">
-		  	</div>
-
-		  	<div class="large-12 colunms">
-		  		<ul  class="small-block-grid-1 large-block-grid-1">
-		  			<li id="sets"></li>
-		  		</ul>
-		  	</div>
-						
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Madelen Ortiz</h1>
-		  		<img src="http://farm8.staticflickr.com/7130/7739618534_94374423e6_b.jpg" alt="">
-		  	</div>
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Keilyn Salsaña</h1>
-		  		<img src="http://farm8.staticflickr.com/7083/7172880072_d46e47c8ca_b.jpg" alt="">
-		  	</div>
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Zianny Muñoz</h1>
-		  		<img src="http://farm8.staticflickr.com/7006/6844973731_5b4d032741_b.jpg" alt="">
-		  	</div>
-		  </li>
-
-
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Dayana Fonseca</h1>
-		  		<img src="http://farm8.staticflickr.com/7152/6805267823_3e8a77d733_b.jpg" alt="">
-		  	</div>
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Jessica Villegas</h1>
-		  		<img src="http://farm8.staticflickr.com/7004/6559135723_e2c44be63c_b.jpg" alt="">
-		  	</div>
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Jessica Alfaro</h1>
-		  		<img src="http://farm8.staticflickr.com/7028/6470695221_8707e6c7f9_b.jpg" alt="">
-		  	</div>
-		  </li>
-		  <li> 
-		  	<div class="gallery">
-		  		<h1>Ingrid Araya</h1>
-		  		<img src="http://farm7.staticflickr.com/6084/6126862524_d8e2665b5c_b.jpg" alt="">
-		  	</div>
-		  </li>
+		  
 		</ul>
 	</div>
 
